[gd_scene load_steps=3 format=3 uid="uid://bhsd35x7acp4l"]

[ext_resource type="Script" path="res://Scenes/Spawner.gd" id="1_usgvv"]

[sub_resource type="Curve3D" id="Curve3D_to3qe"]
_data = {
"points": PackedVector3Array(0, 0, 0, 0, 0, 0, -4.44915, 0, -7.08807, 0, 0, 0, 0, 0, 0, 4.00835, 0, -6.97417),
"tilts": PackedFloat32Array(0, 0)
}
point_count = 2

[node name="Spawner" type="Node"]
script = ExtResource("1_usgvv")

[node name="ObstacleSpawnTimer" type="Timer" parent="."]
one_shot = true

[node name="Obstacles" type="Node" parent="."]

[node name="ObstacleSpawnPath" type="Path3D" parent="."]
curve = SubResource("Curve3D_to3qe")

[node name="ObstacleSpawnLocation" type="PathFollow3D" parent="ObstacleSpawnPath"]
transform = Transform3D(-0.0134661, 0, -0.999909, 0, 1, 0, 0.999909, 0, -0.0134661, -0.182341, 0, -7.03061)
progress = 4.26719

[connection signal="timeout" from="ObstacleSpawnTimer" to="." method="_on_obstacle_spawn_timer_timeout"]
